--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,11 @@
     text-transform: uppercase;
 }
 
-.table:link,
-.table:visited {
+.table {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    cursor: pointer;
     aspect-ratio: 1 / 1;
     width: 40px;
     border-radius: 8px;
@@ -176,8 +175,8 @@
     /* border: 1px solid #D3722E;
     background-color: #F99120;
     color: #fff; */
-    border: 1px solid #D3722E;
-    background-color: #fff;
+    border: 1px solid #D3722E; 
+   background-color: #fff;
     color: #3E3E3E;
 }
 
@@ -197,7 +196,7 @@
 .zone-b {
     grid-area: 1 / 1 / 3 / 7;
     display: flex;
-    gap: 20px;
+    gap: 18px;
     background-color: #86C87E;
     margin-left: 90px;
 
@@ -226,9 +225,9 @@
 .zone-a {
     grid-area: 3 / 1 / 6 / 7;
     display: flex;
-    gap: 12px;
+    gap: 10px;
     padding: 12px;
-    background-color: #8F8F8F;
+    background-color: #c0a5c4;
     margin-left: 90px;
     position: relative;
     height: fit-content;
@@ -393,10 +392,12 @@
 
 .zone-pink .table,
 .zone-pink .table-l {
-    border: 1px solid #C34C60;
+    /* border: 1px solid #C34C60;
     background-color: #F3608A;
-    color: #fff;
-
+    color: #fff; */
+    border: 1px solid #0261A5;
+    background-color: #fff;
+    color: #3E3E3E;
 }
 
 .toilet {
@@ -424,7 +425,7 @@
 
 .men {
     grid-area: 2 / 1 / 4 / 2;
-    background-color: #D2D3D5;
+    background-color: #93eeff;
     height: 100%;
     width: 100%;
     color: #3D3E40;
@@ -439,7 +440,7 @@
 
 .women {
     grid-area: 1 / 2 / 3 / 3;
-    background-color: #D2D3D5;
+    background-color: #ffb1f5;
     height: 100%;
     width: 100%;
     color: #3D3E40    ;
@@ -475,4 +476,47 @@
     text-transform: uppercase;
 
     margin-top: 250px;
+}
+.booked {
+    color: red !important; 
+    background-color: #cccccc !important;
+  }
+  .table.reserve {
+    background-color:#575B5C !important;
+    color: #fff !important;
+}
+.table.p1 {
+    background-color: green !important;
+    color: #fff !important;
+}
+.table.p2 {
+    background-color: blue !important;
+    color: #fff !important;
+}
+.table.p3 {
+    background-color: purple !important;
+    color: #fff !important;
+}
+.table.removing {
+    border-color: #f00 !important;
+    border-width: 3px !important;
+}
+.table.editing {
+    border-color: #0F0 !important;
+    border-width: 3px !important;
+}
+.vvip-custom .table{
+    width: 100% !important;
+    height: 30px;
+    margin: 5px;
+}
+.zone-vvip .table {
+   width: 50px;
+   font-size: 12px;
+   height: 30px;
+}
+.p99{
+    background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) !important;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000 !important;
+    color : #ffffff !important;
 }
