--- a/css/styles_old.css
+++ b/css/styles_old.css
@@ -1,4 +1,4 @@
-/* PLAN */
+PLAN
 
 .plan-layout {
     display: grid;
@@ -21,11 +21,12 @@
     text-transform: uppercase;
 }
 
-.table {
+.table:link,
+.table:visited {
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+
     aspect-ratio: 1 / 1;
     width: 40px;
     border-radius: 8px;
@@ -175,8 +176,8 @@
     /* border: 1px solid #D3722E;
     background-color: #F99120;
     color: #fff; */
-    border: 1px solid #D3722E; 
-   background-color: #fff;
+    border: 1px solid #D3722E;
+    background-color: #fff;
     color: #3E3E3E;
 }
 
@@ -196,7 +197,7 @@
 .zone-b {
     grid-area: 1 / 1 / 3 / 7;
     display: flex;
-    gap: 18px;
+    gap: 20px;
     background-color: #86C87E;
     margin-left: 90px;
 
@@ -225,9 +226,9 @@
 .zone-a {
     grid-area: 3 / 1 / 6 / 7;
     display: flex;
-    gap: 10px;
+    gap: 12px;
     padding: 12px;
-    background-color: #c0a5c4;
+    background-color: #8F8F8F;
     margin-left: 90px;
     position: relative;
     height: fit-content;
@@ -392,12 +393,10 @@
 
 .zone-pink .table,
 .zone-pink .table-l {
-    /* border: 1px solid #C34C60;
+    border: 1px solid #C34C60;
     background-color: #F3608A;
-    color: #fff; */
-    border: 1px solid #0261A5;
-    background-color: #fff;
-    color: #3E3E3E;
+    color: #fff;
+
 }
 
 .toilet {
@@ -425,7 +424,7 @@
 
 .men {
     grid-area: 2 / 1 / 4 / 2;
-    background-color: #93eeff;
+    background-color: #D2D3D5;
     height: 100%;
     width: 100%;
     color: #3D3E40;
@@ -440,7 +439,7 @@
 
 .women {
     grid-area: 1 / 2 / 3 / 3;
-    background-color: #ffb1f5;
+    background-color: #D2D3D5;
     height: 100%;
     width: 100%;
     color: #3D3E40    ;
@@ -476,64 +475,4 @@
     text-transform: uppercase;
 
     margin-top: 250px;
-}
-.booked {
-    color: red !important; 
-    background-color: #cccccc !important;
-  }
-  .booked1 {
-    color: white !important; 
-    background-color: #575B5C !important;
-  }
-  .booked2 {
-    color: white !important; 
-    background-color: green !important;
-  }
-  .booked3 {
-    color: white !important; 
-    background-color: blue !important;
-  }
-  .booked4 {
-    color: white !important; 
-    background-color: purple !important;
-  }
-  
-  .table.reserve {
-    background-color:#575B5C !important;
-    color: #fff !important;
-}
-.table.p1 {
-    background-color: green !important;
-    color: #fff !important;
-}
-.table.p2 {
-    background-color: blue !important;
-    color: #fff !important;
-}
-.table.p3 {
-    background-color: purple !important;
-    color: #fff !important;
-}
-.table.removing {
-    border-color: #f00 !important;
-    border-width: 3px !important;
-}
-.table.editing {
-    border-color: #0F0 !important;
-    border-width: 3px !important;
-}
-.vvip-custom .table{
-    width: 100% !important;
-    height: 30px;
-    margin: 5px;
-}
-.zone-vvip .table {
-   width: 50px;
-   font-size: 12px;
-   height: 30px;
-}
-.p99{
-    background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) !important;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000 !important;
-    color : #ffffff !important;
 }
