--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,13 @@
 
 .empty-box {
     aspect-ratio: 1 / 1;
-    width: 40px;
+    width: 20px;
+    margin-bottom: 0;
+}
+
+.empty-box1 {
+    aspect-ratio: 1 / 1;
+    width: 1px;
     margin-bottom: 0;
 }
 
@@ -110,6 +116,7 @@
     position: relative;
     border-radius: 11px;
     margin-left: 90px;
+    
 }
 
 .zone-c .zone-title {
@@ -130,11 +137,12 @@
 }
 
 .zone-c .box1 {
-    grid-area: 1 / 1 / 3 / 3;
+    grid-area: 1 / 1 / 3 / 4;
     display: flex;
     gap: 12px;
     background-color: #FBC28D;
-    padding: 12px 12px 12px 111px;
+    padding: 12px 12px 12px 130px;
+    
 
 }
 
@@ -147,14 +155,13 @@
 }
 
 .zone-c .box3 {
-    grid-area: 3 / 1 / 5 / 3;
-
+    grid-area: 3 / 1 / 5 / 4;
     display: flex;
     gap: 12px;
     background-color: #FBC28D;
     padding: 12px;
-
     grid-template-rows: 1fr 2fr;
+    padding: 12px 12px 12px 30px;
 }
 
 .zone-c .box4 {
@@ -168,6 +175,7 @@
 .zone-c .box5 {
     grid-area: 1 / 1 / 4 / 2;
     background-color: #F15B29;
+    border-radius: 5px;
 }
 
 .zone-c .table,
@@ -175,7 +183,7 @@
     /* border: 1px solid #D3722E;
     background-color: #F99120;
     color: #fff; */
-    border: 1px solid #D3722E; 
+    border: none solid #D3722E; 
    background-color: #fff;
     color: #3E3E3E;
 }
@@ -226,7 +234,7 @@
     grid-area: 3 / 1 / 6 / 7;
     display: flex;
     gap: 10px;
-    padding: 12px;
+    padding: 40px;
     background-color: #c0a5c4;
     margin-left: 90px;
     position: relative;
@@ -515,6 +523,7 @@
    font-size: 12px;
    height: 30px;
 }
+
 .p99{
     background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet) !important;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000 !important;
